--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       color: #273c75;
     }
 
-    .skills span, .languages span {
+    .skills span, .languages span, .extras span {
       display: inline-block;
       margin: 0.3rem 0.6rem 0.3rem 0;
       padding: 0.4rem 0.8rem;
@@ -71,7 +71,7 @@
     <h1>Md. Monjurul Hasan Razu</h1>
     <h2>Software Developer</h2>
     <p>
-      <a href="mailto:hasanrazu.cse.193.gub@email.com">Email</a> |
+      <a href="mailto:hasanrazu.cse.193.gub@gmail.com">Email</a> |
       <a href="tel:+8801795178673">Phone</a> |
       <a href="https://linkedin.com/in/hasanRAZU" target="_blank">LinkedIn</a> |
       <a href="https://github.com/hasanRAZU" target="_blank">GitHub</a>
@@ -118,6 +118,13 @@
     </ul>
   </section>
 
+  <section class="extras">
+    <h3>Highlights</h3>
+    <p><b>Problem Solving:</b> Active participant in online judges and competitive programming contests.</p>
+    <p><b>Teamwork:</b> Experience working in collaborative academic and freelance projects.</p>
+    <p><b>Leadership:</b> Mentored juniors in programming and project development.</p>
+    <p><b>Career Goal:</b> To become a versatile Software Engineer contributing to impactful projects in AI, cybersecurity, and enterprise applications.</p>
+  </section>
 
   <footer>
     <p>© 2025 Md. Monjurul Hasan Razu | Built with ❤️ using HTML & CSS</p>
