--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h1>Md. Monjurul Hasan Razu</h1>
     <h2>Software Developer</h2>
     <p>
-      <a href="mailto:hasanrazu.cse.193.gub@gmail.com">Email</a> |
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=hasanrazu.cse.193.gub@email.com" target="_blank"> Email</a> |
       <a href="tel:+8801795178673">Phone</a> |
       <a href="https://linkedin.com/in/hasanRAZU" target="_blank">LinkedIn</a> |
       <a href="https://github.com/hasanRAZU" target="_blank">GitHub</a>
